plugins {
    id 'org.springframework.boot' version '2.1.7.RELEASE'
    id 'io.spring.dependency-management' version '1.0.8.RELEASE'
    id "com.google.protobuf" version "0.8.10"
    id "java"
    id "idea"

}


group = 'com.rvr.event.planner'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }

}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'io.reactivex:rxjava:1.2.5'
    implementation 'com.google.protobuf:protobuf-java:3.9.1'
    implementation 'com.github.BAData:protobuf-converter:1.1.5'
    // util dependency to convert to JSON
    implementation 'com.google.protobuf:protobuf-java-util:3.9.1'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

protobuf {
    // Configure the protoc executable
    protoc {
        // Download from repositories
        artifact = 'com.google.protobuf:protoc:3.9.1'
    }
}
